--- a/cookies/pom.xml
+++ b/cookies/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.5.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.validerePerson</groupId>
-	<artifactId>validerePerson</artifactId>
+	<groupId>com.cookies</groupId>
+	<artifactId>cookies</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>validerePerson</name>
-	<description>validereFodselsaar</description>
+	<name>cookies</name>
+	<description>cookies</description>
 	<url/>
 	<licenses>
 		<license/>
