--- a/sesjonerInnlogging/src/main/resources/application.properties
+++ b/sesjonerInnlogging/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=sesjonerInnlogging
+
+# Application context root. Blir da localhost:8080/f21/webshop ..
+spring.mvc.servlet.path=/f21
+
+# View/JSP folder and file extension
+spring.mvc.view.prefix=/WEB-INF/
+spring.mvc.view.suffix=.jsp
+
+# My app properties. Kan hentes med @Value("${app.url.login}") ..
+app.url.login=login
+app.url.webshop=webshop
+app.url.logout=logout
+
+app.message.invalidUsername=Manglende eller ugyldig brukernavn
+app.message.requiresLogin=Forespørselen din krever at du er innlogget
+app.message.loggedOut=Du er nå logget ut
